--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,3 +5,5 @@
     <li><%= link_to list.name, list_path(list) %></li>
   <% end %>
 </ul>
+
+<p><%= link_to "Create new list", new_list_path %></p>
