--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,4 +2,6 @@
 
 <h4><%= @list.description %></h4>
 
+<p><%= link_to "Edit the list", edit_list_path(@list) %></p>
+
 <p><%= link_to "Return to lists", lists_path %></p>
