--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,13 @@
+<% content_for(:title, "List | To Do") %>
+
 <h1><%= @list.name %></h1>
 
 <h4><%= @list.description %></h4>
 
 <p><%= link_to "Edit the list", edit_list_path(@list) %></p>
+
+<p><%= link_to "Delete the list", list_path(@list),
+                                  :data => {:confirm => 'You sure about that, bro?',
+                                            :method => 'delete'} %></p>
 
 <p><%= link_to "Return to lists", lists_path %></p>
